More changes from last night: fix Excel and KML export. Update footer statement and graphics. Fixed Image Search URL in web.xml. Added auto-logging of Alternate ID changes to the encounter/individual record. Additional properties were added to commonConfig for use with Excel export.

--- a/src/servletResponseTemplate.htm
+++ b/src/servletResponseTemplate.htm
@@ -31,7 +31,7 @@
 	</tr>
 	<tr>
 		<td>
-		<p align="left"><img src="BOTTOMGRAPHIC" width="720" height="14" /></p>
+		<p align="left"><img src="BOTTOMGRAPHIC" /></p>
 		</td>
 	</tr>
 </table>
