bug fixes, new Measurement class, cleanup - in js

--- a/src/main/webapp/javascript/classes/info.html
+++ b/src/main/webapp/javascript/classes/info.html
@@ -104,6 +104,9 @@ inds.fetch({
 
 
 <script>
+
+$(document).ready(function() { wildbook.init(); });
+
 	$('.exec').click(function() {
 		$('#output').html('');
 		var js = this.innerHTML;
